[gd_scene load_steps=4 format=3 uid="uid://dnrhkjbwhffdl"]

[ext_resource type="Script" path="res://Scenes/Weapons/Launcher/rocket_launcher.gd" id="1_7vxg1"]
[ext_resource type="PackedScene" uid="uid://bkyc7ua8n63cn" path="res://Scenes/Weapons/Launcher/Models/launcher.tscn" id="1_k5tw8"]
[ext_resource type="AudioStream" uid="uid://cr8s8v2dhppe4" path="res://Scenes/Weapons/Launcher/Sounds/Rocket fire.wav" id="4_nyunm"]

[node name="RocketLauncher" type="Node3D"]
script = ExtResource("1_7vxg1")

[node name="LauncherModel" parent="." instance=ExtResource("1_k5tw8")]

[node name="RocketSpawnPoint" type="Marker3D" parent="LauncherModel"]
unique_name_in_owner = true
transform = Transform3D(1, 9.31323e-10, 1.81899e-12, 0, 1, -2.56114e-09, 0, -6.98492e-10, 1, -0.000461638, 0.0438546, -0.185872)

[node name="ReloadTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[node name="ShotTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.15
one_shot = true

[node name="LaunchSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_nyunm")
volume_db = 5.0
max_polyphony = 10
bus = &"InWorldSound"

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
